# compiledb-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: build-lint-test.yml  release-plz.yml  release.yml
src/: lib.rs  main.rs  make_wrapper.rs  parser.rs
