[package]
name = "compiledb"
version = "0.1.0"
edition = "2021"
authors = ["Original: fcying, Rust port: community"]
description = "Clang's Compilation Database generator for make-based build systems"
license = "GPL-3.0"
rust-version = "1.74.0"
repository = "https://github.com/a5ehren/compiledb-rs"
keywords = ["make", "clang", "devtools"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
which = "7.0.3"

[dev-dependencies]
tempfile = "3.19"
assert_fs = "1.1"
predicates = "3.1" 
