[package]
name = "compiledb"
version = "1.0.2"
edition = "2021"
authors = ["Original: fcying, Rust port: a5ehren"]
description = "Clang's Compilation Database generator for make-based build systems"
license = "GPL-3.0"
rust-version = "1.74.0"
repository = "https://github.com/a5ehren/compiledb-rs"
keywords = ["make", "clang", "devtools"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
regex = "1.11.1"
anyhow = "1.0.98"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = "0.3.19"
which = "8.0.0"
env_logger = "0.11.8"
log = "0.4.27"

[dev-dependencies]
tempfile = "3.20.0"
assert_fs = "1.1.3"
predicates = "3.1.3"
