[package]
name = "compiledb"
version = "1.1.2"
edition = "2024"
authors = ["Original: fcying, Rust port: a5ehren"]
description = "Clang's Compilation Database generator for make-based build systems"
license = "GPL-3.0"
rust-version = "1.85.0"
repository = "https://github.com/a5ehren/compiledb-rs"
keywords = ["make", "clang", "devtools"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.12.2"
anyhow = "1.0.100"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.22"
which = "8.0.0"
env_logger = "0.11.8"
log = "0.4.29"

[dev-dependencies]
tempfile = "3.23.0"
assert_fs = "1.1.3"
predicates = "3.1.3"
